# tkacz-abandoned

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.ok  Doxyfile  LICENSE_BLOCK  Makefile  README - copie.md  README.md  Tkacz.pri  Tkacz.pro  build.py  build.sh  doxygen.h  license_block  prebuild.py  setup.py  tkacz.doxygen  tkacz.pro  tkacz.pro.tpl  uiLogicCompiler.py
CMakeModules/: FindGengetopt.cmake  FindLibgit2.cmake  FindMongoDB.cmake  FindXercesC.cmake  MacOSXBundleInfo.plist.in
builders/: __init__.py  _classgen.py  classgen.py  dir2qrc.py  licblock.py  tzuic.py
core/: TZAppVersion.h  Tkacz.cpp  Tkacz.h  tkacz.cpp  tkacz.h
core/data/: TZCard.cpp  TZCard.h  TZEntityTemplate.cpp  TZObject.cpp  TZObject.h  TZTaxon.cpp  TZTemplate.cpp  TZTemplate.h  primitives.cpp  primitives.h  taxonomies.cpp  taxonomies.h  types.cpp  types.h
core/io/: DataBridge.h  databridge.h
core/schema/: loader.cpp  loader.h
doc/: ROADMAP.md  project_fr.lyx  project_fr.lyx21.lyx  project_fr.tex  roadmap_tasks.md  tasks.org
doc/project/: .gitignore  00_05_intro.tex.md  10_00.tex.md  10_10_intro.tex.md  10_20_cards.tex.md  10_20_fiches.tex.md  10_20_fondamentals.tex.md  10_30_taxinomie.tex.md  10_30_taxonomy.tex.md  10_40_links.tex.md  10_40_search.tex.md  10_50_operations.tex.md  10_60_extensions.tex.md  20_00_usage.tex.md  20_10_cli.tex.md  20_10_models.tex.md  20_10_syntax.tex.md  20_10_syntaxe.tex.md  20_10_ui.tex.md  20_20_syntax.tex.md  20_20_ui.tex.md  20_30_editing.tex.md  20_30_syntax.tex.md  20_30_syntax.tex.md.deprec  20_30_ui_bindings.tex.md  20_40_search.tex.md  20_40_search.tex.md.deprec  20_90_cli.tex.md  30_00_implementation.tex.md  30_00_models.tex.md  30_10_intro.tex.md  30_10_stockage.tex.md  30_10_storage.tex.md  30_20_types.tex.md  30_30_datatypes.tex.md  30_40_cardtypes.tex.md  30_50_relationtypes.tex.md  30_60_schemas.tex.md  30_70_ui.tex.md  40_10_storage.tex.md  (+19 more)
gui/: TZMainWindow.h  main.cpp
icons/: Tkacz.icns
models/lt/thb/refman/: bibtex.py
models/tkacz/core/types/: TZString.py  __init__.py
models/tkacz/datatypes/: Person.xml  PersonName.xml
models/tkacz/reference_manager/: __init__.py
models/tkacz/reference_manager/types/: Reference.py
platform/osx/: Info.plist  Tkacz-Info.plist  app.icns
pysrc/core/tkacz/: nativetypes.py  types.py
pysrc/models/types/: person.py
qrc/: common.qrc  icons.qrc
qrc/common/actions/: actions.xml
qrc/common/formats/: editorLogic.yaml  editorStyles.yaml
qrc/common/i18n/: tkacz_fr.ts
qrc/common/tkacz/: credits.html
resources/icons/: app.psd
resources/qrc/: common.qrc  icons.qrc
resources/qrc/common/actions/: menus.xml
resources/qrc/common/tkacz/: acknowledgements.html  license.html
resources/ui/: dlgAbout.ui  dlgConsole.ui  dlgFirstStart.ui  dlgPreferences.ui  mwLocationBar.ui  mwPageEditor.ui  mwPageView.ui  pythonError.ui
schema/: base.xml
schema/types/: person.py  person.xml
schemas/: person.xml
src/: TZBuildConfig.h.in  TZGlobals.h.in  doxygen.h  tzbuild.h.in  tzcommon.hpp
src-schemas/tkacz_schemas/: __init__.py
src-schemas/tkacz_schemas/types/: entry.py  entry.subTypes.xml  person.py
src-ui/tkacz_gui/: __init__.py  core.py  layouts.py  models.py
src-ui/tkacz_gui/dialogs/: aboutDialog.py  collectionEditor.py
src-ui/tkacz_gui/mainwindow/: __init__.py  listOfEntryPoints.py  locationBar.py  pageEditor.py  pagePropertiesEditor.py  pageView.py  pagesList.py  repositorySettingsView.py  toolBarWidget.py
src-ui/tkacz_gui/uibase/: __init__.py
src-ui/tkacz_gui/widgets/: propertyEdit.py
src/cli/: CmdInit.cpp  Command.cpp  Command.hpp  MetaCommand.cpp  MetaCommand.hpp  cmd_init.cpp  cmdtree.txt  main.cpp  parameters.ggo  subcommands.hpp  util.cpp  util.hpp
src/core/: DataType.hpp  Exception.hpp  Platform.cpp  Platform.hpp  Repository.cpp  Repository.hpp  TZAppVersion.h  TZVersion.h  Tkacz.cpp  Tkacz.h  Tkacz.hpp  Version.cpp  Version.hpp
src/core/db/: MongoDbStore.cpp  MongoDbStore.hpp  Store.cpp  Store.hpp
src/core/entities/: EntityNode.cpp  EntityNode.hpp  ListNode.cpp  ListNode.hpp  Node.cpp  Node.hpp  RootNode.cpp  RootNode.hpp  TZEntityNode.cpp  TZEntityNode.h  TZListNode.cpp  TZListNode.h  TZNode.cpp  TZValueNode.cpp  TZValueNode.h  ValueNode.cpp  ValueNode.hpp
src/core/io/: TZStore.cpp
src/core/python/: TZProperty.cpp  TZProperty.hpp
src/core/repositories/: FSRepository.cpp  FSRepository.hpp  Repository.cpp  Repository.hpp  TZFSRepository.cpp  TZFSRepository.h  TZRepository.cpp  TZRepository.h
src/core/schemas/: EntitySchema.cpp  EntitySchema.hpp  ListSchema.cpp  ListSchema.hpp  PrimitiveSchema.cpp  PrimitiveSchema.hpp  Schema.cpp  Schema.hpp  TZEntitySchema.cpp  TZEntitySchema.h  TZListSchema.cpp  TZListSchema.h  TZPrimitiveSchema.cpp  TZPrimitiveSchema.h  TZSchema.cpp  TZValueSchema.cpp  TZValueSchema.h  ValueSchema.cpp  ValueSchema.hpp
src/core/schemas/loader/: HandlerDispatcher.cpp  HandlerDispatcher.hpp  SchemaLoader.cpp  SchemaLoader.hpp  TZSchemaLoader.cpp
src/core/taxonomies/: TZTaxon.h  TZTaxonomy.cpp  TZTaxonomy.h  Taxon.cpp  Taxon.hpp  Taxonomy.cpp  Taxonomy.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp  TZMainWindow.cpp  main.cpp
src/gui/_intermediates/: tz_uibase.h
src/gui/forms/: AboutDialog.hpp  MainWindow.cpp  MainWindow.hpp
src/gui/perspectives/: ViewPerspective.cpp  ViewPerspective.hpp
src/tkacz/: __init__.py  app.py
src/tkacz/helpers/: MustacheView.py
src/tkacz/io/: __init__.py  fs.py  mongo.py  zipBundle.py
src/tkacz/mapper/: __init__.py  taxonomies.py
ui/: dlgAbout.ui  dlgCollectionEditor.ui  dlgConsole.ui  dlgCrashReporter.ui  dlgFirstStart.ui  dlgPreferences.ui  mainWindow.ui  mwListOfEntryPoints.ui  mwMainView.ui  mwPagePropertiesEditor.ui  mwPageView.ui  mwPagesList.ui  mwRepositorySettingsView.ui  mwToolBarWidget.ui  perspView.ui  propertyEditWidget.ui  pythonError.ui
uidata/ui/: dlgCollectionEditor.ui  dlgConsole.ui  dlgCrashReporter.ui  dlgPreferences.ui  mwLocationBar.ui  mwPageEditor.ui
uidata/xml/: states.xml
xml/: actions.xml  menus.xml  states.xml
(+2 files in other folders)
